--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -71,8 +71,8 @@
     }
   },
   "locationbanner": {
-    "title": "In the Laurentian Mountains",
-    "subtitle": "Chalet in Mont-Tremblant, Québec"
+    "title": "Spacious Chalet in Old Village",
+    "subtitle": "Mont-Tremblant, Québec"
   },
   "propertydescription": {
     "title": "At a glance",
