--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -71,8 +71,8 @@
     }
   },
   "locationbanner": {
-    "title": "Dans les Laurentides",
-    "subtitle": "Chalet à Mont-Tremblant, Québec"
+    "title": "Un spacieux Chalet au Vieux Village",
+    "subtitle": "Mont-Tremblant, Québec"
   },
   "propertydescription": {
     "title": "En un coup d'œil",
